online-boutique/istio-manifests/frontend-gateway.yaml
# # Copyright 2018 Google LLC
# #
# # Licensed under the Apache License, Version 2.0 (the "License");
# # you may not use this file except in compliance with the License.
# # You may obtain a copy of the License at
# #
# #      http://www.apache.org/licenses/LICENSE-2.0
# #
# # Unless required by applicable law or agreed to in writing, software
# # distributed under the License is distributed on an "AS IS" BASIS,
# # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# # See the License for the specific language governing permissions and
# # limitations under the License.

# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata: # kpt-merge: frontend/frontend-gateway
#   name: frontend-gateway
#   namespace: frontend
#   annotations:
#     internal.kpt.dev/upstream-identifier: 'networking.istio.io|Gateway|frontend|frontend-gateway'
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: frontend/frontend-ingress
  name: frontend-ingress
  namespace: frontend
spec:
  hosts:
  - "*"
  gateways:
  - asm-gateways/asm-ingress-gateway-xlb
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
