online-boutique/istio-manifests/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: frontend/frontend-ingress
  name: frontend-ingress
  namespace: frontend
spec:
  hosts:
  - "boutique.endpoints.tenant-management-394215.cloud.goog"
  gateways:
  - asm-gateways/asm-ingress-gateway-xlb
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
